--- a/firebucket.html
+++ b/firebucket.html
@@ -35,7 +35,7 @@
             transform: translateX(-50%);
             width: 80px;
             height: 80px;
-            background: url('C:/Users/DIXON/OneDrive - Kingston University/FIRE BUCKET GAME/fire.png') no-repeat center center;
+            background: url('https://github.com/meldixon28/firebucket/blob/main/fire.png') no-repeat center center;
             background-size: cover;
         }
 
@@ -45,7 +45,7 @@
             left: 10%;
             width: 60px;
             height: 60px;
-            background: url('C:/Users/DIXON/OneDrive - Kingston University/FIRE BUCKET GAME/bucket.png') no-repeat center center;
+            background: url('https://github.com/meldixon28/firebucket/blob/main/bucket.png') no-repeat center center;
             background-size: cover;
             cursor: pointer;
         }
